[gd_scene load_steps=8 format=3 uid="uid://c1yablwjh8wrk"]

[ext_resource type="Script" uid="uid://crhqbihgt4p2c" path="res://Scenes/UI/pausemenu.gd" id="1_rp7hy"]
[ext_resource type="FontFile" uid="uid://jbbxmrffrxqq" path="res://Assets/Fonts/m5x7.ttf" id="2_ng1wx"]
[ext_resource type="AudioStream" uid="uid://q6iylgd1j0a2" path="res://Audio/buttonpress.mp3" id="3_ymp2i"]
[ext_resource type="AudioStream" uid="uid://vdd7r2c04aob" path="res://Audio/hover-button-287656.mp3" id="4_03qeq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w30yk"]
bg_color = Color(0.578237, 0.615574, 0.544154, 1)
draw_center = false
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymp2i"]
bg_color = Color(0.703024, 0.552679, 0.603204, 1)
draw_center = false
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03qeq"]
bg_color = Color(0.890924, 0.407875, 0.640467, 1)
draw_center = false

[node name="Pausemenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rp7hy")

[node name="Resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23300001
anchor_top = 0.429
anchor_right = 0.73600006
anchor_bottom = 0.586
offset_left = -0.41601563
offset_top = -5.9920044
offset_right = 0.12792969
offset_bottom = 0.27197266
theme_override_colors/font_color = Color(0.819608, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ng1wx")
theme_override_font_sizes/font_size = 109
theme_override_styles/normal = SubResource("StyleBoxFlat_w30yk")
text = "Resume"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.735
anchor_right = 0.712
anchor_bottom = 0.914
offset_top = -0.279999
offset_right = -0.223999
offset_bottom = -0.272034
theme_override_colors/font_color = Color(0.92156863, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ng1wx")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_ymp2i")
text = "QUIT"

[node name="Pausetitle" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.997
anchor_bottom = 0.216
offset_right = -0.544067
offset_bottom = 0.0319977
theme_override_fonts/font = ExtResource("2_ng1wx")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_03qeq")
text = "Paused"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ymp2i")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_03qeq")

[connection signal="mouse_entered" from="Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
